[gd_scene load_steps=4 format=3 uid="uid://cxfqajstekahy"]

[ext_resource type="PackedScene" uid="uid://6huoh8opodh2" path="res://addons/sv_mod_loader/interface/mod_list_editor/mod_list_editor.tscn" id="1_28m0n"]
[ext_resource type="Script" uid="uid://cbvvrg60yiqsi" path="res://addons/sv_mod_loader/interface/mod_loader/mod_loader.gd" id="1_ebwwu"]

[sub_resource type="LabelSettings" id="LabelSettings_wedkw"]
font_size = 48

[node name="ModLoader" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ebwwu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "SV Mod Loader"
label_settings = SubResource("LabelSettings_wedkw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleTextureRect" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
stretch_mode = 3

[node name="TitleSceneParent" type="Control" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="PlayButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Play"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="AboutButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "About"

[node name="QuitButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit"

[node name="ReferenceRect" type="ReferenceRect" parent="Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="ModListEditor" parent="Panel/MarginContainer/HBoxContainer" instance=ExtResource("1_28m0n")]
layout_mode = 2

[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
